Add output volume control to Resampler
Introduces a 'volume' option to the Resampler class for adjusting output amplitude. Updates documentation, type definitions, example usage, and adds a test to verify volume scaling. Also adds 'volume-control' to package keywords.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "stereo",
         "mono",
         "pure-js",
-        "audio-processing"
+        "audio-processing",
+        "volume-control"
     ],
     "author": "Russell Purinton <russell@purinton.us>",
     "license": "MIT",
