--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "type": "module",
     "version": "1.0.3",
     "description": "A pure JavaScript, high-quality PCM audio resampler for Node.js. Converts s16le PCM between arbitrary sample rates and channel layouts (mono/stereo) with windowed-sinc filtering.",
+    "main": "index.cjs",
     "module": "index.mjs",
     "types": "index.d.ts",
     "files": [
         "index.mjs",
+        "index.cjs",
         "index.d.ts",
         "README.md",
         "LICENSE"
@@ -14,6 +16,7 @@
     "exports": {
         ".": {
             "import": "./index.mjs",
+            "require": "./index.cjs",
             "types": "./index.d.ts"
         }
     },
